--- a/public/css/client.css
+++ b/public/css/client.css
@@ -126,6 +126,10 @@ body {
         background-position-x: center;
     }
 
+    .text-responsive {
+      font-size: calc(5% + 1vw + 1vh)!important;
+    }
+
     .hero .image {
         margin-top: 0;
     }
