--- a/public/css/client.css
+++ b/public/css/client.css
@@ -8,7 +8,7 @@ body {
     top: 0;
     height: 70px;
     z-index: 1;
-    background-color: rgba(89, 143, 191, 0.75) !important;
+    background-color: #f087b6 !important;
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -31,6 +31,14 @@ body {
 
 .fixed img {
     width: 100px !important;
+}
+
+.active {
+  border-bottom: 2px solid #fff;
+  background-color: rgb(0 0 0 / 8%);
+}
+.active a {
+  color: #fff!important;
 }
 
 .text-title {
@@ -60,7 +68,7 @@ body {
     margin-bottom: 25px;
 }*/
 .hero {
-    background: #bee8f5;
+    background: #f087b6;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 0px;
@@ -77,8 +85,17 @@ body {
     min-height: 65px;
 }
 
+.btn-shadow {
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+}
+
+
 .bg-audio {
     background-color: #f287b6;
+}
+
+.bg-hero {
+  background-color: #f087b6;
 }
 
 .pre-border {
@@ -155,7 +172,7 @@ body {
         bottom: 0px;
         left: 0px;
         right: 0px;
-        z-index: 20;
+        z-index: 0;
     }
 
     .hero .wave img {
