--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
     top: 0;
     height: 70px;
     z-index: 1;
-    background-color: rgba(89, 143, 191, 0.75) !important;
+    background-color: #f087b6 !important;
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -16,6 +16,13 @@ body {
     color: #fff;
 }
 
+.active {
+  border-bottom: 2px solid #fff;
+  background-color: rgb(0 0 0 / 8%);
+}
+.active a {
+  color: #fff!important;
+}
 .fixed ul li a {
     color: #fff !important;
 }
@@ -60,7 +67,7 @@ body {
     margin-bottom: 25px;
 }*/
 .hero {
-    background: #bee8f5;
+    background: #f087b6;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 0px;
@@ -69,12 +76,20 @@ body {
     margin-bottom: 25px;
 }
 
+.bg-hero {
+  background-color: #f087b6;
+}
+
 .btn-h {
     font-weight: bold;
     background: #005a8d !important;
     font-size: 24px;
     line-height: 28px;
     min-height: 65px;
+}
+
+.btn-shadow {
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
 }
 
 .bg-audio {
@@ -134,7 +149,7 @@ body {
     }
 
     .hero .wave {
-        z-index: 0;
+        z-index: 1;
     }
 
     .hero .image {
@@ -154,7 +169,7 @@ body {
         bottom: 0px;
         left: 0px;
         right: 0px;
-        z-index: 20;
+        z-index: 0;/*c'etait à 20*/
     }
 
     .hero .wave img {
